--- a/pages/p5/953180.md
+++ b/pages/p5/953180.md
@@ -1,4 +1,4 @@
-### 原龙江银行行长被查 曾因窝里斗致多名高管落马(图)
+### 信号强烈：两大中国首富双双受重挫……(组图)
 ------------------------
 
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;&nbsp;|&nbsp;&nbsp; [法轮功真相](https://github.com/begood0513/basic/blob/master/README.md)  &nbsp;&nbsp;|&nbsp;&nbsp; [手把手翻墙教程](https://github.com/gfw-breaker/guides/wiki)  &nbsp;&nbsp;|&nbsp;&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md)  
@@ -6,79 +6,201 @@
 
 
 <div class="article_right" style="fone-color:#000">
- <p style="text-align: center;">
-  <img alt="" src="https://img3.secretchina.com/pic/2020/2-21/p2632032a262823118-ss.jpg"/>
-  <br>
-   龙江银行与中国大部分地区的中小城商行一样，净利润大幅下滑，资产质量严重恶化。（图片来源：Adobe Stock）
-   <span id="hideid" name="hideid" style="color:red;display:none;">
-    <span href="https://www.secretchina.com">
-    </span>
+ <p>
+  【看
+  <span href="https://www.secretchina.com" target="_blank">
+   中国
+  </span>
+  2020年11月20日讯】11月初的一周之内，两大中国首富双双受重挫，释放信号强烈。
+  <span id="hideid" name="hideid" style="color:red;display:none;">
+   <span href="https://www.secretchina.com">
    </span>
-  </br>
+  </span>
  </p>
  <div id="txt-mid1-t21-2017">
   
 
 ---
 
-#### 💥 [《伪火》 - 天安门自焚真相 ](http://158.247.195.190:10000/videos/blog/weihuo.html)&nbsp; |&nbsp; [“1400例”谎言揭秘  ](http://158.247.195.190:10000/videos/blog/jiexi1400.html)
-
 #### [ 🎬  翻墙必看视频（YouTube热门频道、网站代理、时事热点、历史事件 ...）](https://github.com/gfw-breaker/links/blob/master/banned.md)
+
+#### [ 💥  禁书下载（政治、经济、人权、民主自由、文革、六四 ...）](https://github.com/gfw-breaker/books/blob/master/README.md)
 
 
   </div>
  </div>
  <p>
-  【看中国2020年9月28日讯】（看中国记者丁晓雨综合报导）9月25日，
   <strong>
-   黑龙江
+   一
   </strong>
-  纪委监委在官网发布消息，
-  <strong>
-   <span href="https://www.secretchina.com/news/gb/tag/龙江银行" target="_blank">
-    龙江银行
-   </span>
-  </strong>
-  原党委副书记、行长
-  <strong>
-   关喜华
-  </strong>
-  涉嫌严重违纪违法，目前正接受纪律审查和监察调查。而此前，龙江银行已有多位高管“
-  <strong>
-   落马
-  </strong>
-  ”。
   <span id="hideid" name="hideid" style="color:red;display:none;">
    <span href="https://www.secretchina.com">
    </span>
   </span>
  </p>
  <p>
-  据
-  <span href="https://www.secretchina.com/news/gb/tag/黑龙江" target="_blank">
-   黑龙江
+  <span href="https://www.secretchina.com/news/gb/tag/蚂蚁" target="_blank">
+   蚂蚁
   </span>
-  省纪委监委官网显示，关喜华曾长期供职于交通银行大庆分行，2000年5月就任交通银行大庆分行党委委员、副行长职务。2003年6月，担任原大庆市商业银行董事长并兼任行长，2008年12月至2009年12月，担任该银行党委书记和董事长。
+  推迟上市，多少员工财富自由梦碎，多少隐藏身份的投资者开始失望。
  </p>
  <p>
-  2009年12月底，原齐齐哈尔市商业银行、牡丹江市商业银行、大庆市商业银行和七台河市城市信用社合并成立龙江银行，
-  <span href="https://www.secretchina.com/news/gb/tag/关喜华" target="_blank">
-   关喜华
+  财新网公开了蚂蚁尚未穿透到底的显名股东的引发相对较完整名单，里面的人物，普通人万万猜不到的……
+ </p>
+ <p style="text-align: center;">
+  <img alt="" src="https://img3.secretchina.com/pic/2020/11-20/p2821801a838042485-ss.jpg" style="height:936px; width:600px"/>
+ </p>
+ <p style="text-align: center;">
+  <img alt="一份蚂蚁尚未穿透到底的显名股东的较完整名单" src="https://img3.secretchina.com/pic/2020/11-20/p2821761a752272356-ss.jpg" style="height:809px; width:600px"/>
+  <br>
+   一份蚂蚁尚未穿透到底的显名股东较完整名单（来源：财新）
+  </br>
+ </p>
+ <p>
+  这份股东名单，信息量巨大：新加坡持股7%；马来西亚国库3.56%；沙特和阿联酋各1%；加拿大3.28%.....还有四大金融系——中金系，博裕系，春华系和云锋系。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  为了把蚂蚁绑上国家利益战车上，社保基金只分2.94%，中金2%，人寿1.29%，国内基金更是只有一点点。国有背景股份寥寥无几，其中的中央电视台在里面还真是刺眼。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  给港台新泰澳的华人巨富股份；给美国加拿大法国私人股东股份；给国内某些私人股东股份，比如赵薇、李开复、李嘉诚、胡祖六等等。他们有些人偷偷通过自己的亲戚代持，动机不纯地来分享这场饕餮大餐。只要一上市，他们赚1亿、10亿、100亿……都是分分钟的事。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  蚂蚁集团上市本身就带着问题，很多股民看不到：这是作为一家表面上是金融科技，实际内核是网贷的公司。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  然而，大家通过黄奇帆的讲话，才被蚂蚁的杠杆是多大给震惊的了：蚂蚁用30亿资本金做大到3000亿放贷，加100倍杠杆，真是厉害。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  这种做法是不是中国版的次贷危机？这是金融创新，还是钻了政策漏洞呢？
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  更让大家震惊的是：之前很长时间，高层一直在研究对金融科技公司的监管框架，准备酝酿监管政策出台。而蚂蚁一直与政策赛跑，上市之路诡异得快。如果它成功上市，政策一出，如同巨雷，赵薇之类大股东先跑了，多少股民基金的资产被腰斩……
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  二
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  昨天，“马已今服”；今天，“
+  <span href="https://www.secretchina.com/news/gb/tag/深深房" target="_blank">
+   深深房
   </span>
-  担任副行长，2011年升任行长。
+  哀”……
  </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
  <p>
-  2015年7月，关喜华被黑龙江省政府免去
-  <span href="https://zh.wikipedia.org/wiki/龙江银行" target="_blank">
-   龙江银行
+  11月9日晚间，深深房A上万股东一片哀嚎：中国
+  <span href="https://www.secretchina.com/news/gb/tag/恒大" target="_blank">
+   恒大
   </span>
-  行长职务，降为普通员工，一年后辞职。
- </p>
- <p>
-  2020年9月25日，黑龙江纪委监委在官网发布消息称，龙江银行原党委副书记、行长关喜华涉嫌严重违纪违法，目前正接受纪律审查和监察调查。
- </p>
- <p>
-  而此前，龙江银行已有多位高管“落马”。
+  与深深房A同时发布公告终止重组，四年停牌终成一场空。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -93,120 +215,7 @@
   </div>
  </center>
  <p>
-  据
-  <span href="https://zh.wikipedia.org/wiki/黑龙江" target="_blank">
-   黑龙江
-  </span>
-  省纪委监委通报，2015年7月，时任龙江银行副行长王贵彬（副厅级）因涉嫌严重违纪接受调查；2014年，该行原董事长杨进先被查并被开除党籍，原副行长杨宝仁犯受贿罪被判处有期徒刑15年。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  据《券商
-  <span href="https://www.secretchina.com" target="_blank">
-   中国
-  </span>
-  》报导，龙江银行多位高管被查，与其内部“内斗”有关。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  《京华时报》曾经报导称，在2012年杨进先担任龙江银行董事长、党委书记，关喜华担任行长期间，二者分别代表的“派系”发生过摩擦和斗争。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  龙江银行第一任董事长、党委书记杨进先曾在工商银行黑龙江省分行工作多年，曾任工商银行黑龙江省分行副行长兼营业部总经理、常务副行长。而关喜华在龙江银行合并后，将大批原大庆商业银行中高层干部带至龙江银行。并在担任行长期间，撤换多名高层员工，由此引发与杨进先的矛盾。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  关喜华曾在与杨进先的对骂中，指着其鼻子称：“我不把你从龙江银行整下来，我就不在银行待了。”
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  2013年10月，杨进先从龙江银行董事长、党委书记，退为党委副书记、监事长，直至2014年9月涉嫌严重违纪违法被查。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  地处东北地区的龙江银行，与全国大部分地区的中小城商行一样，净利润大幅下滑，资产质量严重恶化。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  据龙江银行2020年上半年报，该行上半年实现净利润6.47亿元（人民币，下同），同比减少2.27亿元，净利润同比下滑25.97%。资产总额为2520.39亿元，比去年末增加113.58亿元。
+  大家应该还记得那封“求救报告”，后来被恒大定为“凭空捏造、纯属诽谤”。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -224,8 +233,11 @@
   <ins class="adsbygoogle" data-ad-client="ca-pub-1276641434651360" data-ad-format="fluid" data-ad-layout="in-article" data-ad-slot="3646767294" style="display:block; text-align:center;">
   </ins>
  </center>
- <p>
-  同时，龙江银行的资本充足率和资产质量也在上半年出现下滑。
+ <p style="text-align: center;">
+  <img alt="2020年9月份恒大地产的求救信部分内容" src="https://img3.secretchina.com/pic/2020/11-20/p2821781a103561210-ss.jpg" style="height:426px; width:500px"/>
+  <br>
+   2020年9月份曝光的恒大地产的求救信部分内容（网络图片）
+  </br>
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -240,7 +252,7 @@
   </div>
  </center>
  <p>
-  半年报显示，截至今年6月末，该行资本充足率为12.06%，一级资本和核心一级资本充足率均为9.80%，其中资本充足率比去年末下降了0.13个百分点。
+  当时，所有人都被这封信给吓到了：金融系统风险、严重影响就业，331万人稳定就业，204万业主面临工程烂尾……
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -255,7 +267,7 @@
   </div>
  </center>
  <p>
-  资产质量方面，截至2020年6月末，该行不良贷款余额为28.11亿元，比去年末增加7.8亿元；不良贷款率为2.64%，比去年末增加0.59个百分点，高于全国商业银行1.94%的平均水平。
+  所有人都在担心，恒大出事波及面到底有多大，会不会从一个企业的危机，扩散为一场行业危机，最终演化为类似美国次贷危机的一场经济灾难。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -270,7 +282,7 @@
   </div>
  </center>
  <p>
-  今年以来，龙江银行频频被监管部门开出罚单。截至9月25日，龙江银行今年被和黑龙江银保监局开出25张罚单，合计被罚305万元，涉及双鸭山、七台河、齐齐哈尔、黑河、广信等地的多家分行和支行。其中有22张涉及的原因是放贷的过程出现违规。
+  不过幸好，许家印用了120个小时，让恒大惊天大逆转：引入1300亿战略投资者，基本是他的朋友圈：200亿苏宁张近东，苏商大佬；50亿正威集团王文银，广东省工商联副主席。这两位大佬在资本界可以说是呼风唤雨，有他们坐镇，十八路诸侯汇聚一起，出钱出力。他们抱团取暖、歃血为盟，大而不倒，这是足以载入史册的危机教科书。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -285,7 +297,37 @@
   </div>
  </center>
  <p>
-  评级公司联合资信在2020年7月24日对龙江银行出具的一份评级报告中指出，龙江银行贷款面临一定的客户集中风险；其对市场融入资金的依赖程度较高；投资资产规模较大，非标业务不良资产清收处置情况需持续关注。
+  但即使如此，监管层依然不开绿灯。正如深深房公告所说，基于目前市场环境等原因，现阶段继续推进重大资产重组的条件尚不成熟。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  这与跟蚂蚁的道歉公告有着相同的味道。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  正所谓“此地无银三百两”……
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -317,7 +359,7 @@
   ，就可以助力我们突破审查与封锁，向至少10000位中国大陆同胞奉上独立真实的关键资讯，在危难时刻向他们发出预警，救他们于大瘟疫与其它社会危难之中。
   <center>
    <span href="https://account.secretchina.com/planshopcart.php?pid=2020plana&amp;carf=add&amp;code=b5">
-    <img src="/kzgd/ad/join_membership_728x90.jpg" width="100%"/>
+    <img src="/kzgd/ad/kzgad202010728.gif" width="100%"/>
    </span>
   </center>
   <center>
@@ -349,13 +391,13 @@
 
 <hr/>
 手机上长按并复制下列链接或二维码分享本文章：<br/>
-https://github.com/gfw-breaker/banned-news3/blob/master/pages/p5/947492.md <br/>
-<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p5/947492.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p5/947492.md.png'/></a> <br/>
-原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/09/28/947492.html
+https://github.com/gfw-breaker/banned-news3/blob/master/pages/p5/953180.md <br/>
+<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p5/953180.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p5/953180.md.png'/></a> <br/>
+原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/11/20/953180.html
 
 
 ------------------------
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;|&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md) &nbsp;| [《九评共产党》](https://github.com/gfw-breaker/9ping.md/blob/master/README.md#九评之一评共产党是什么) | [《解体党文化》](https://github.com/gfw-breaker/jtdwh.md/blob/master/README.md) | [《共产主义的终极目的》](https://github.com/gfw-breaker/gczydzjmd.md/blob/master/README.md)
 
 
-<img src='http://gfw-breaker.win/banned-news3/pages/p5/947492.md' width='0px' height='0px'/>
+<img src='http://gfw-breaker.win/banned-news3/pages/p5/953180.md' width='0px' height='0px'/>
