--- a/pages/prog202/a102991427.md
+++ b/pages/prog202/a102991427.md
@@ -1,4 +1,4 @@
-### 【全球新闻】10月23日完整版
+### 11月20日国际重要讯息
 ------------------------
 
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;&nbsp;|&nbsp;&nbsp; [法轮功真相](https://github.com/begood0513/basic/blob/master/README.md)  &nbsp;&nbsp;|&nbsp;&nbsp; [手把手翻墙教程](https://github.com/gfw-breaker/guides/wiki)  &nbsp;&nbsp;|&nbsp;&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md)  
@@ -7,34 +7,43 @@
 
 <div><div class="post_content" itemprop="articleBody">
  <p>
-  【新唐人北京时间2020年10月24日讯】【全球新闻】10月23日完整版
+  【新唐人北京时间2020年11月20日讯】请看一组
+  <ok href="https://www.ntdtv.com/gb/新闻简讯.htm">
+   新闻简讯
+  </ok>
+  。
  </p>
  <p>
   <strong>
-   提要
-   <br/>
+   [日本]
   </strong>
-  <ok href="https://www.ntdtv.com/gb/川普.htm">
-   川普
-  </ok>
-  斡旋
-  <ok href="https://www.ntdtv.com/gb/苏丹.htm">
-   苏丹
-  </ok>
-  承认
-  <ok href="https://www.ntdtv.com/gb/以色列.htm">
-   以色列
-  </ok>
-  、加入美国反恐联盟
   <br/>
-  拜登“电邮门”关键证人现身 指证
-  <ok href="https://www.ntdtv.com/gb/拜登家族丑闻.htm">
-   拜登家族丑闻
+  东京单日新增首度破500例，菅义伟表示：日本最大警戒。
+ </p>
+ <p>
+  <strong>
+   [中国]
+  </strong>
+  <br/>
+  赵立坚在记者会上粗口骂
+  <ok href="https://www.ntdtv.com/gb/五眼联盟.htm">
+   五眼联盟
   </ok>
+  。网民酸，中共外交部成黑社会流氓。
+ </p>
+ <p>
+  <strong>
+   [美国]
+  </strong>
   <br/>
-  习高调谈抗美援朝 意在锁国 恐加速覆灭
+  美议员提法案要求严审美中“姊妹城市”关系。
+ </p>
+ <p>
+  <strong>
+   [欧洲]
+  </strong>
   <br/>
-  全球最大喷泉迪拜开启 梦幻场景犹如童话
+  欧洲13国最新民调：中华人民共和国形象输台湾。
  </p>
  <div class="single_ad">
  </div>
@@ -42,13 +51,13 @@
 </div>
 <hr/>
 手机上长按并复制下列链接或二维码分享本文章：<br/>
-https://github.com/gfw-breaker/banned-news3/blob/master/pages/prog202/a102970438.md <br/>
-<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/prog202/a102970438.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/prog202/a102970438.md.png'/></a> <br/>
-原文地址（需翻墙访问）：https://www.ntdtv.com/gb/2020/10/24/a102970438.html
+https://github.com/gfw-breaker/banned-news3/blob/master/pages/prog202/a102991427.md <br/>
+<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/prog202/a102991427.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/prog202/a102991427.md.png'/></a> <br/>
+原文地址（需翻墙访问）：https://www.ntdtv.com/gb/2020/11/20/a102991427.html
 
 
 ------------------------
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;|&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md) &nbsp;| [《九评共产党》](https://github.com/gfw-breaker/9ping.md/blob/master/README.md#九评之一评共产党是什么) | [《解体党文化》](https://github.com/gfw-breaker/jtdwh.md/blob/master/README.md) | [《共产主义的终极目的》](https://github.com/gfw-breaker/gczydzjmd.md/blob/master/README.md)
 
 
-<img src='http://gfw-breaker.win/banned-news3/pages/prog202/a102970438.md' width='0px' height='0px'/>
+<img src='http://gfw-breaker.win/banned-news3/pages/prog202/a102991427.md' width='0px' height='0px'/>
