同步于: 11月21日1时3分

--- a/pages/nf4514/n12563284.md
+++ b/pages/nf4514/n12563284.md
@@ -51,6 +51,42 @@
  以下是美国大选日各州投票情况的实时更新：
 </h4>
 <h3>
+ 朱利安尼：揭露选举舞弊 两党的爱国者都有
+</h3>
+<p>
+ 川普总统周五一早转发了布莱特巴特传媒（
+ <em>
+  Breitbart
+ </em>
+ ）关于周四川普总统的法律团队新闻发布会的报导，其中引述了朱利安尼律师的讲话，他说这一次揭露选举舞弊和诈欺的法律战，有来自美国两大主要政党的爱国者的大量举报。
+</p>
+<p>
+ <center>
+ </center>
+</p>
+<blockquote class="twitter-tweet">
+ <p dir="ltr" lang="en">
+  Giuliani: The Case for Election Fraud Being Made By Americans
+  <ok href="https://t.co/yNfaKqYzCO">
+   https://t.co/yNfaKqYzCO
+  </ok>
+  via
+  <ok href="https://twitter.com/BreitbartNews?ref_src=twsrc%5Etfw">
+   @BreitbartNews
+  </ok>
+ </p>
+ <p>
+  — Donald J. Trump (@realDonaldTrump)
+  <ok href="https://twitter.com/realDonaldTrump/status/1329784812257890306?ref_src=twsrc%5Etfw">
+   November 20, 2020
+  </ok>
+ </p>
+</blockquote>
+<p>
+</p>
+<p>
+</p>
+<h3>
  川普传唤密歇根州共和党领袖到白宫会面
 </h3>
 <p>
