同步于: 11月21日3时3分

--- a/pages/soh6/445012.md
+++ b/pages/soh6/445012.md
@@ -115,6 +115,22 @@
   </ok>
   】
  </h2>
+ <h3 class="title">
+  川普召见密州共和党领袖到白宫会面
+ </h3>
+ <p>
+  <ok href="/term/17375">
+   密歇根州
+  </ok>
+  已被川普律师团队指证是本次大选中舞弊最严重的摇摆州之一。周五，川普总统在白宫召见了密州参众两院的共和党领袖。据路透社报导，密州参议院多数党领袖希尔基（Mike Shirkey）和密州众议院议长查特菲尔德（Lee Chatfield）都同意到白宫与川普总统会面。目前，媒体还不清楚这次会议的内容，而这两位共和党领袖也都未对此发表评论。
+ </p>
+ <div class="AD_Embed__Wrap-sc-1xslmin-0 igMuqX module desktop">
+  <div>
+  </div>
+ </div>
+ <p>
+  在本次大选中，密州底特律逾7成选区的选票总数出现异常，收回的选举票居然超过选民数。另外，由于该州多个县使用了问题软件Dominion投票系统，导致计票数完全不可靠。据悉，仅在安特里姆县（Antrim County）一个县，该软件就将6,000张川普的票错误计算给了拜登。
+ </p>
  <h3>
   <ok href="/term/17375">
    密歇根州
@@ -268,6 +284,12 @@
  </p>
  <p>
   雅各布在今年9月被被分配参加投票工作。她谈到自己受过如何欺诈的培训，“我的主管指示我，将这些缺席邮寄选票的邮寄日期调整到早于实际发送日期。”她还披露，她看到选举工作人员非法指导选民要投票给谁，“我每天都观察到，底特律的选举工作人员都在诱导或试图诱导选民投票给乔‧拜登和民主党”。
+ </p>
+ <h2>
+  加州联邦众议员努内斯：拜登应与川普一起等待重新计票结果
+ </h2>
+ <p>
+  加州众议员努内斯（Devin Nunes）表示，民主党总统候选人拜登应跟川普总统一样，等待这次大选的重新计票结果，以确保每一张选票都被合法计算。他说，媒体的虚假报导让人感觉这次选举已经结束了，但是事实并非如此。“我们要对选举结果进行认证，以确保这是一次自由公正的选举。”
  </p>
  <p>
   （更新中）
