--- a/pages/nf4514/n12560779.md
+++ b/pages/nf4514/n12560779.md
@@ -1,4 +1,4 @@
-### 【大选更新11·19】川普团队宣布更多舞弊证据
+### 【大选更新11·19】“费城舞弊案可装满图书馆”
 ------------------------
 
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;&nbsp;|&nbsp;&nbsp; [法轮功真相](https://github.com/begood0513/basic/blob/master/README.md)  &nbsp;&nbsp;|&nbsp;&nbsp; [手把手翻墙教程](https://github.com/gfw-breaker/guides/wiki)  &nbsp;&nbsp;|&nbsp;&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md)  
@@ -7,7 +7,7 @@
 
 <div><img alt="【大选更新11·19】“费城舞弊案可装满图书馆”" class="attachment-djy_600_400 size-djy_600_400 wp-post-image" src="https://i.epochtimes.com/assets/uploads/2020/11/GettyImages-1229683370-600x400.jpg"/>
 <div class="caption">
- 川普团队律师、前纽约市长鲁迪·朱利安尼（Rudy Giuliani）于2020年11月19日在华盛顿特区的共和党全国委员会总部举行的新闻发布会上发表讲话。（MANDEL NGAN/AFP via Getty Images）
+ 川普团队律师、前纽约市长鲁迪·朱利安尼（Rudy Giuliani）于2020年11月19日在华盛顿特区的共和党全国委员会总部举行的新闻发布会上发表讲话。朱利安尼说，此次选举舞弊是一个集中控制的计划好的阴谋，尤其集中在民主党控制的大城市，比如费城和底特律。并说费城的选举欺诈案件数量可以填满一座图书馆。（MANDEL NGAN/AFP via Getty Images）
 </div></div><hr/>
 
 #### [ 🎬  翻墙必看视频（YouTube热门频道、网站代理、时事热点、历史事件 ...）](https://github.com/gfw-breaker/links/blob/master/banned.md)
@@ -557,7 +557,7 @@
       她说，因此，1月5日如果共和党人不能在乔治亚州胜选，民主党人想要推行的就将是此类的议程。
      </p>
      <h3>
-      朱利安尼：费城选举欺诈案件数量可填满一个图书馆
+      朱利安尼：“费城舞弊案可装满一座图书馆”
      </h3>
      <figure class="wp-caption aligncenter" id="attachment_12561833" style="width: 600px">
       <ok href="https://i.epochtimes.com/assets/uploads/2020/11/GettyImages-1229683262.jpg">
@@ -571,7 +571,7 @@
       朱利安尼在川普法律团队的新闻发布会上说：
      </p>
      <p>
-      “这不是某个州的单一的选民欺诈，这种模式在许多州都重复发生，几乎完全一样的模式，任何经验丰富的法律部调查员、检察官都可以说这是一个从一个某处集中执行这些选举诈欺 。正如你可以想像的那样，这些诈欺特别集中在大城市，特别集中在民主党控制的大城市，尤其集中在腐败历史悠久的大城市。费城的选举欺诈案件数量可以填满一个图书馆。”
+      “这不是某个州的单一的选民欺诈，这种模式在许多州都重复发生，几乎完全一样的模式，任何经验丰富的法律部调查员、检察官都可以说这是一个从一个某处集中执行这些选举诈欺 。正如你可以想像的那样，这些诈欺特别集中在大城市，特别集中在民主党控制的大城市，尤其集中在腐败历史悠久的大城市。费城的选举欺诈案件数量可以填满一座图书馆。”
      </p>
      <p>
       “就在几周前，就有一个选举欺诈的定罪案件，而在那之前的两个星期又有一例。 我经常说，如果费城没有在这次选举中作弊，我才会真的觉得奇怪，因为在过去的60年中，他们几乎在每一次选举中都作弊。底特律也一样。”
