--- a/pages/nsc412/n12563284.md
+++ b/pages/nsc412/n12563284.md
@@ -5,7 +5,7 @@
 
 
 
-<div><img alt="【大选更新11·20】林伍德：坚守对自由与美国的承诺" class="attachment-djy_600_400 size-djy_600_400 wp-post-image" src="https://i.epochtimes.com/assets/uploads/2020/11/GettyImages-51177487-600x400.jpg"/>
+<div><img alt="【大选更新11·20】林伍德：坚守对自由的承诺" class="attachment-djy_600_400 size-djy_600_400 wp-post-image" src="https://i.epochtimes.com/assets/uploads/2020/11/GettyImages-51177487-600x400.jpg"/>
 <div class="caption">
  川普团队律师林伍德周五周五傍晚，川普法律团队律师林伍德表示，将用生命和荣誉坚守对自由与美国的承诺。图为林伍德律师资料照(Photo by Thomas Cooper/Getty Images)
 </div></div><hr/>
