--- a/pages/nf4514/n12563284.md
+++ b/pages/nf4514/n12563284.md
@@ -31,7 +31,7 @@
  <ok href="https://www.epochtimes.com/gb/tag/%E5%B7%9D%E6%99%AE.html">
   川普
  </ok>
- 总统周四（19日）晚间再度于推特上分享一张数据图，指出密歇根州在大选夜清晨，突然增加十几万票，这是川普连续第二天指出，
+ 总统周四（11月19日）晚间再度于推特上分享一张数据图，指出密歇根州在大选夜清晨，突然增加十几万票，这是川普连续第二天指出，
  <ok href="https://www.epochtimes.com/gb/tag/%E6%8B%9C%E7%99%BB.html">
   拜登
  </ok>
@@ -92,7 +92,7 @@
  兹米拉克于2014年在纽约一家公关公司做自由职业者时认识了鲍威尔，他说鲍威尔是位不寻常的女人，她不但脑力超强而且为人极其正直。
 </p>
 <p>
- 鲍威尔是个福音派基督徒，她曾是第五巡回法院的首席检察官，在接收的500 个上诉官司中，胜诉率高达70%，她被同行们评为“超级律师”。但是她辞职了，因为她看到了同事们的腐败行为，检察官隐瞒无罪证据，针对无辜者调查，只是因为他们个人的政治观点不同。她为之感到愤怒，并决定成为辩护律师，帮助人们对抗联邦政府的腐败。她放弃了一切来揭露滥用职权的检察官们。
+ 鲍威尔是个福音派基督徒，她曾是第五巡回法院的首席检察官，在接收的500个上诉官司中，胜诉率高达70%，她被同行们评为“超级律师”。但是她辞职了，因为她看到了同事们的腐败行为，检察官隐瞒无罪证据，针对无辜者调查，只是因为他们个人的政治观点不同。她为之感到愤怒，并决定成为辩护律师，帮助人们对抗联邦政府的腐败。她放弃了一切来揭露滥用职权的检察官们。
 </p>
 <p>
  不仅如此，她还把个人的经历写成书《授权撒谎》（Licensed to lie）。这本书的内容绝对令人不寒而栗。它展示了无辜的美国人，甚至是美国的参议员，比如阿拉斯加州的泰德‧史蒂文斯（Ted Stevens），都无法为自己辩护，对抗那些怀有仇怨的检察官。
