--- a/pages/p5/953305.md
+++ b/pages/p5/953305.md
@@ -1,4 +1,4 @@
-### 楼继伟称要破解三个难局 再评习近平经济政策(图)
+### 应投资者要求 蚂蚁战配基金可退 涉1360万人(图)
 ------------------------
 
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;&nbsp;|&nbsp;&nbsp; [法轮功真相](https://github.com/begood0513/basic/blob/master/README.md)  &nbsp;&nbsp;|&nbsp;&nbsp; [手把手翻墙教程](https://github.com/gfw-breaker/guides/wiki)  &nbsp;&nbsp;|&nbsp;&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md)  
@@ -7,9 +7,9 @@
 
 <div class="article_right" style="fone-color:#000">
  <p style="text-align: center;">
-  <img alt="楼继伟 习近平 经济" src="https://img3.secretchina.com/pic/2020/7-21/p2737131a9657743-ss.jpg" style="height:339px; width:600px"/>
+  <img alt="蚂蚁集团 投资者 基金" src="https://img3.secretchina.com/pic/2020/10-30/p2807462a423771708-ss.jpg"/>
   <br>
-   习近平提出的经济“双循环”政策存在问题。（图片来源：Getty Image）
+   应投资者要求，蚂蚁战略配售基金可退。（图片来源：STR/AFP via Getty Images）
    <span id="hideid" name="hideid" style="color:red;display:none;">
     <span href="https://www.secretchina.com">
     </span>
@@ -21,164 +21,68 @@
 
 ---
 
-#### 💥 [《伪火》 - 天安门自焚真相 ](http://158.247.195.190:10000/videos/blog/weihuo.html)&nbsp; |&nbsp; [“1400例”谎言揭秘  ](http://158.247.195.190:10000/videos/blog/jiexi1400.html)
-
 #### [ 🎬  翻墙必看视频（YouTube热门频道、网站代理、时事热点、历史事件 ...）](https://github.com/gfw-breaker/links/blob/master/banned.md)
+
+#### [ 💥  禁书下载（政治、经济、人权、民主自由、文革、六四 ...）](https://github.com/gfw-breaker/books/blob/master/README.md)
 
 
   </div>
  </div>
  <p>
-  【看中国2020年9月29日讯】（看中国记者李正鑫综合报导）9月28日，中国财政部前部长
+  【看中国2020年11月21日讯】（看中国记者丁晓雨综合报导）
   <strong>
-   楼继伟
-  </strong>
-  公开演讲称，需要破解控制疫情和复苏
-  <strong>
-   经济
-  </strong>
-  等三个难局。并且，他再次分析了中国国家主席
-  <strong>
-   <span href="https://www.secretchina.com/news/gb/tag/习近平" target="_blank">
-    习近平
+   <span href="https://www.secretchina.com/news/gb/tag/蚂蚁集团" target="_blank">
+    蚂蚁集团
    </span>
   </strong>
-  提出的经济“双循环”政策存在的问题。
+  上市被紧急刹车后，在
+  <strong>
+   基金
+  </strong>
+  持有人的呼吁下，蚂蚁战略配售基金日前在原有方案的基础上，公布了新的方案：五只创新未来基金新设B类份额，可供持有人申请退出所用，
+  <strong>
+   投资者
+  </strong>
+  可以按基金份额净值退出，并自11月23日起正式生效。也就是说，这5只创新未来基金合计1360万户持有人可以“自由选择赎回”，但退出时间限定在一个月内。
   <span id="hideid" name="hideid" style="color:red;display:none;">
    <span href="https://www.secretchina.com">
    </span>
   </span>
  </p>
  <p>
-  <strong>
-   <span href="https://www.secretchina.com/news/gb/tag/楼继伟" target="_blank">
-    楼继伟
-   </span>
-   ：破局不会在2020年
-  </strong>
- </p>
- <p>
-  由中国企业改革与发展研究会、中国产经新闻报社、网易财经联合主办的2020网易
-  <span href="https://zh.wikipedia.org/zh-cn/%E7%BB%8F%E6%B5%8E" target="_blank">
-   经济
+  据《中国
+  <span href="https://www.secretchina.com/news/gb/tag/基金" target="_blank">
+   基金
   </span>
-  学家年会在上海举行，主题是“全球共破局”。
+  报》报导，11月20日，华夏、易方达、汇添富、鹏华、中欧旗下五只创新未来基金齐齐发布“增设B份额并修订基金合同及招募说明书”公告。
  </p>
  <p>
-  9月28日，据网易财经报道，全国政协常委外事委员会主任、中国财政部前部长
-  <span href="https://zh.wikipedia.org/zh-cn/%E6%A5%BC%E7%BB%A7%E4%BC%9F" target="_blank">
-   楼继伟
+  公告显示，这五只创新未来基金新设B类份额，可供持有人申请退出所用，投资者可以按
+  <span href="https://zh.wikipedia.org/wiki/基金" target="_blank">
+   基金
   </span>
-  在论坛主题演讲环节表示，一是要破解控制疫情和复苏经济的难局；二是要破解逆全球化僵局；三是全球与共，“这就难了，需要相当一段时间的折腾”。
+  份额净值退出，并自11月23日起正式生效。涉及这5只创新未来基金的1360万户持有人，可以“自由选择赎回”。
  </p>
  <p>
-  楼继伟认为，本轮逆球化的思潮是逐步兴起的，已经有大约10年的过程。全球化是基于规则的自由贸易，以及跨境投资，是基于规则的各国和企业之间的竞争合作，按照比较优势，产业链、供应链分布到全球，提高全球
-  <span href="https://www.secretchina.com/news/gb/tag/经济" target="_blank">
-   经济
+  五大基金公司公告称，此举是从保护
+  <span href="https://zh.wikipedia.org/wiki/投資者" target="_blank">
+   投资者
   </span>
-  的效率。在给所有国家带来红利的同时也有副作用，比如传统就业机会的转移和收入分配的改变，这种改变有利于大型跨国公司和资本，不利于发达国家中低收入者的就业，收入分配差距扩大。
+  利益的原则出发，经与基金托管人上海浦东发展银行协商一致，并向中国证监会备案。易方达、华夏、汇添富、鹏华、中欧旗下五只创新未来18个月封闭运作混合型基金增设B类基金份额，并对基金合同、招募说明书进行修订。
  </p>
  <p>
-  楼继伟举例进行解释，“电商平台的兴起，使得不少实体店倒闭，甚至大型购物中心也在倒闭或者转型，不少传统就业岗位流失”。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  什么时候才能好转？
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  楼继伟表示近期不乐观，“目前全球杠杆率高企，相对于经济基本面，金融资产存在泡沫，在疫情得到控制，经济逐步恢复之后，极度宽松的财政货币政策需要退出，如果退出节奏不当，引发比2008年全球金融危机更强烈的危机，不是没有可能。危机有可能触发共识，合作共破局。但不会是2020”。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  并且，他再次分析了中国国家主席
-  <span href="https://zh.wikipedia.org/zh-cn/%E4%B9%A0%E8%BF%91%E5%B9%B3" target="_blank">
-   习近平
+  在五大基金公司发布公告的前一日（11月19日)，
+  <span href="https://zh.wikipedia.org/wiki/蚂蚁集团" target="_blank">
+   蚂蚁集团
   </span>
-  提出的经济“双循环”政策存在的问题：“目前由于体制机制改革还不到位，国内的需求和供给还没有很好的动员起来，内外循环的结合还有障碍，因此结构性改革和依法治国是关键”。
+  已在支付宝页面设置“重要提醒”，发布关于创新未来基金安排的联合说明。
  </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
  <p>
-  <strong>
-   习近平的经济“双循环”政策怎么样？
-  </strong>
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  从供给侧改革到经济“双循环”的政策，习近平的表态释放出不同的经济信号。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
+  对五大基金公司的公告，《
   <span href="https://www.secretchina.com" target="_blank">
    中国
   </span>
-  经济连年不断下滑，北京当局早前提出的经济内循环政策，被外界解读为是闭关锁国。后来，其又提出要推动经济国内国际双循环。中国国家主席习近平多次主持会议时提出，“逐步形成以国内大循环为主体、国内国际双循环相互促进的新发展格局。”
+  基金报》总结了以下几个要点：
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -193,7 +97,7 @@
   </div>
  </center>
  <p>
-  据《财新网》9月24日报道，中国财政部前部长楼继伟撰文分析历年的经济决策。
+  1、增设自动赎回B类基金份额。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -208,7 +112,86 @@
   </div>
  </center>
  <p>
-  楼继伟分析经济“双循环”的政策认为，从国民经济角度看，积极参与国际大循环，增加国民收入，也会增加国内需求。重要的是解决好制约“双循环”的堵点：第一，坚定地推进供给侧结构性改革。第二，坚定地推进依法治国。第三，要降低基础设施和准公共设施的用户成本。第四，要坚定的维护和改进国际规则。
+  目前创新未来基金在指定期间内新增B类基金份额，
+  <span href="https://www.secretchina.com/news/gb/tag/投资者" target="_blank">
+   投资者
+  </span>
+  认购并持有的创新未来基金现有基金份额为C类基金份额。在指定期间内，允许基金份额持有人申请自C类基金份额转入并自动赎回的基金份额为B类基金份额。（注意看B类、C类的代码）
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  2、指定时间是一个月。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  公告显示，指定期间的具体时间为2020年11月23日0时至2020年12月22日15时，基金份额持有人可在指定期间提出相关申请。指定期间届满后，就不再接受转为B类基金份额的申请，B类基金份额注销，未选择退出的基金份额持有人将继续持有原份额。B类基金份额的存续时间与指定期间相同。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  3、B份额不开放申购。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  在指定期间内，B类基金份额不开放申购，仅接受基金份额持有人将持有的全部或部分C类基金份额转为B类基金份额并自动赎回的申请。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  4、退出金额的计算公式。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -227,7 +210,7 @@
   </ins>
  </center>
  <p>
-  楼继伟强调，真正的供给侧结构性改革，基于规则的对外开放和依法治国，应当是要点。“特别要提醒，既然是客观规律，政府有意按双循环优化产业链布局是做不到的，竞相动用公共资金抢占技术新高地是做不好的，得不偿失，还会引起国内外的误解。”
+  5、期间免收管理费、托管费、销售服务费。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -242,7 +225,7 @@
   </div>
  </center>
  <p>
-  另外，习近平经济“双循环”的政策也遭遇挑战：企业订单下降，民众收入不如以往。
+  6、指定期间届满后，B类基金份额注销。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -257,7 +240,7 @@
   </div>
  </center>
  <p>
-  据香港《南华早报》英文版9月26日报道，中国传统产业的商品需求疲软，导致数百万名工人失业。
+  报导称，多位业内人士认为，蚂蚁战略配售基金此次推出的退出方案，给予投资者充分的选择权。切实回应了投资者的合理诉求，保护了基金持有人合法权益。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -272,7 +255,7 @@
   </div>
  </center>
  <p>
-  报道称，以纺织业知名的广州桥南新街有不少求职者，但一名自湖北赴广州求职的农民工表示，她现在的收入恐怕比6、7月时更低。每天上午7时开始，轮班上工14小时，但半个月仅能赚取人民币2000元。除了房租，还得负担家乡年迈父母及小孩的花费，“我努力工作，但仍不够支应家庭开销”。
+  据悉，5只创新未来基金都处于初步建仓期，成立时间皆只有1个月左右，截至最新净值更新（11月13日），5只产品平均收益率1.13%。其中，收益率最高的产品1个月净赚2.19%，还有多只产品收益率在1%上下浮动。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -287,22 +270,7 @@
   </div>
  </center>
  <p>
-  一名小型成衣厂业者也表示，因为新订单的不确定性太高，现在已无法雇用全职员工，只能聘临时工。在业界10年，但从未见过这么多人聚在一起找工作，且与过去几年相比，现在的薪水不仅较少，也更加不稳定。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  报道分析认为，这将为北京当局所提出的“双循环”政策带来挑战。因为在外部环境不佳的情况下，该政策侧重利用中国的内需市场，驱动经济成长。若中国2.7亿名农民工的收入没有获得保障，消费的动力也将减少。
+  在投资层面，部分创新未来基金还在近日发布公告，基金陆续参与了定增投资。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -334,7 +302,7 @@
   ，就可以助力我们突破审查与封锁，向至少10000位中国大陆同胞奉上独立真实的关键资讯，在危难时刻向他们发出预警，救他们于大瘟疫与其它社会危难之中。
   <center>
    <span href="https://account.secretchina.com/planshopcart.php?pid=2020plana&amp;carf=add&amp;code=b5">
-    <img src="/kzgd/ad/join_membership_728x90.jpg" width="100%"/>
+    <img src="/kzgd/ad/kzgad202010728.gif" width="100%"/>
    </span>
   </center>
   <center>
@@ -366,13 +334,13 @@
 
 <hr/>
 手机上长按并复制下列链接或二维码分享本文章：<br/>
-https://github.com/gfw-breaker/banned-news3/blob/master/pages/p5/947593.md <br/>
-<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p5/947593.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p5/947593.md.png'/></a> <br/>
-原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/09/29/947593.html
+https://github.com/gfw-breaker/banned-news3/blob/master/pages/p5/953305.md <br/>
+<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p5/953305.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p5/953305.md.png'/></a> <br/>
+原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/11/21/953305.html
 
 
 ------------------------
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;|&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md) &nbsp;| [《九评共产党》](https://github.com/gfw-breaker/9ping.md/blob/master/README.md#九评之一评共产党是什么) | [《解体党文化》](https://github.com/gfw-breaker/jtdwh.md/blob/master/README.md) | [《共产主义的终极目的》](https://github.com/gfw-breaker/gczydzjmd.md/blob/master/README.md)
 
 
-<img src='http://gfw-breaker.win/banned-news3/pages/p5/947593.md' width='0px' height='0px'/>
+<img src='http://gfw-breaker.win/banned-news3/pages/p5/953305.md' width='0px' height='0px'/>
