--- a/pages/nf4514/n12565761.md
+++ b/pages/nf4514/n12565761.md
@@ -5,7 +5,7 @@
 
 
 
-<div><img alt="【大选更新11.21】全美50州将再游行挺川普" class="attachment-djy_600_400 size-djy_600_400 wp-post-image" src="https://i.epochtimes.com/assets/uploads/2020/11/IMG_2543-1-600x400.jpg"/>
+<div><img alt="【大选更新11.21】美50州再游行 挺川普" class="attachment-djy_600_400 size-djy_600_400 wp-post-image" src="https://i.epochtimes.com/assets/uploads/2020/11/IMG_2543-1-600x400.jpg"/>
 <div class="caption">
  11月21日，美国各州举行集会游行，传递出抗议大选舞弊与支持川普连任的心声。图为上周末在华府集会的美国民众（施萍/大纪元）
 </div></div><hr/>
@@ -15,7 +15,7 @@
 #### [ 💥  禁书下载（政治、经济、人权、民主自由、文革、六四 ...）](https://github.com/gfw-breaker/books/blob/master/README.md)
 
 <div><p>
- 【大纪元2020年11月21日讯】（大纪元记者陈霆综合报导）在越来越多证据之下，试图掩盖
+ 【大纪元2020年11月21日讯】（大纪元记者陈霆、李言综合报导）在越来越多证据之下，试图掩盖
  <ok href="https://www.epochtimes.com/gb/tag/%E5%A4%A7%E9%80%89%E8%88%9E%E5%BC%8A.html">
   大选舞弊
  </ok>
@@ -48,6 +48,29 @@
 <h4>
  以下是美国大选情况的实时更新：
 </h4>
+<h3>
+ 保守派最高法院大法官将分管4个关键摇摆州
+</h3>
+<figure class="wp-caption aligncenter" id="attachment_12565884" style="width: 711px">
+ <ok href="https://i.epochtimes.com/assets/uploads/2020/11/supreme-court-justices-1200x675.jpg">
+  <img alt="" class="size-medium_vertical wp-image-12565884" src="https://i.epochtimes.com/assets/uploads/2020/11/supreme-court-justices-1200x675-711x400.jpg"/>
+ </ok>
+ <br/><figcaption class="wp-caption-text">
+  图中从左到右、从上到下分别为最高法院大法官布雷特·卡瓦诺（Brett Kavanaugh）、艾米·康尼·巴雷特（Amy Coney Barrett）、克拉伦斯·托马斯（Clarence Thomas）、塞缪尔·阿里托（Samuel Alito）。 （Brendan Smialowski, Greg Nash, Mandel Ngan/AFP via Getty Images）
+ </figcaption><br/>
+</figure><br/>
+<p>
+ 最高法院于11月20日发布了一份新的巡回任务清单。显示保守派大法官将负责四个关键州的巡回工作。此次大选，川普（特朗普）在六个州的选票存在争议，这四个州均在其中。
+</p>
+<p>
+ 具体来说，保守派大法官塞缪尔·阿里托（Samuel Alito）、克拉伦斯·托马斯（Clarence Thomas）、布雷特·卡瓦诺（Brett Kavanaugh）和艾米·科尼·巴雷特（Amy Coney Barrett）将分别负责处理来自宾夕法尼亚、乔治亚、密歇根和威斯康星四个选举战场州的紧急申诉。自由派大法官艾琳娜·卡根（Elena Kagan）将负责处理其它两个有争议的州——亚利桑那州和内华达州的巡回事务。
+</p>
+<p>
+ 虽然尚未有任何选举诉讼递交最高法院，但川普竞选团队和第三方均在六个州提出了法律挑战。
+</p>
+<p>
+ 最高法院于2000年终结了乔治·布什（George Bush）与阿尔·戈尔（Al Gore）之间的选举争议。考虑到悬而未决的法律挑战，美国最高法院可能再次发挥关键作用。
+</p>
 <h3>
  美国50州民众再次游行挺川
 </h3>
