--- a/pages/p1/953348.md
+++ b/pages/p1/953348.md
@@ -1,4 +1,4 @@
-### 打貪？肉荒？中國基層機關食堂18.5元肉價改185元(图)
+### 四川泸州发生一起溺亡事故 3死1伤(图)
 ------------------------
 
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;&nbsp;|&nbsp;&nbsp; [法轮功真相](https://github.com/begood0513/basic/blob/master/README.md)  &nbsp;&nbsp;|&nbsp;&nbsp; [手把手翻墙教程](https://github.com/gfw-breaker/guides/wiki)  &nbsp;&nbsp;|&nbsp;&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md)  
@@ -6,13 +6,10 @@
 
 
 <div class="article_right" style="fone-color:#000">
- <p style="text-align: center;">
-  <img alt="豬肉 食堂 貪腐" src="https://img3.secretchina.com/pic/2020/9-7/p2770801a694574349-ss.jpg" style="height:337px; width:600px"/>
+ <p style="text-align:center">
+  <img alt="四川泸州纳溪区大渡口镇发生一起溺亡事故，共造成3人死亡1人受伤（图片来源：微博）" src="https://img3.secretchina.com/pic/2020/11-21/p2822771a932904345-ss.jpg" style="height:337px; width:600px"/>
   <br>
-   <strong>
-    重慶
-   </strong>
-   市九龍坡區機關食堂竟爆出，採購人員將一斤18.5元的肉謊報成185元天價。（圖片來源：STR/AFP via Getty Images）
+   四川泸州纳溪区大渡口镇发生一起溺亡事故，共造成3人死亡1人受伤（图片来源：微博）
    <span id="hideid" name="hideid" style="color:red;display:none;">
     <span href="https://www.secretchina.com">
     </span>
@@ -24,49 +21,50 @@
 
 ---
 
-#### 💥 [《伪火》 - 天安门自焚真相 ](http://158.247.195.190:10000/videos/blog/weihuo.html)&nbsp; |&nbsp; [“1400例”谎言揭秘  ](http://158.247.195.190:10000/videos/blog/jiexi1400.html)
-
 #### [ 🎬  翻墙必看视频（YouTube热门频道、网站代理、时事热点、历史事件 ...）](https://github.com/gfw-breaker/links/blob/master/banned.md)
+
+#### [ 💥  禁书下载（政治、经济、人权、民主自由、文革、六四 ...）](https://github.com/gfw-breaker/books/blob/master/README.md)
 
 
   </div>
  </div>
  <p>
-  【看中國2020年9月24日訊】中共官場幾乎無所不貪，從上到下
+  【看中国2020年11月21日讯】11月20日下午，
   <strong>
-   貪腐
-  </strong>
-  問題早不是新聞。日前有消息傳出，
-  <strong>
-   重慶
-  </strong>
-  市九龍坡區
-  <strong>
-   <span href="https://www.secretchina.com/news/gb/tag/機關食堂" target="_blank">
-    機關食堂
+   <span href="https://www.secretchina.com/news/gb/tag/四川" target="_blank">
+    四川
    </span>
+   泸州
   </strong>
-  竟爆出，採購人員將一斤18.5元的肉，謊報成185元天價，價格暴漲10倍。
+  纳溪区大渡口镇发生一起
+  <strong>
+   溺亡事故
+  </strong>
+  ，共造成3人死亡1人受伤。相关责任人已被控制。事故原因还在进一步调查。
   <span id="hideid" name="hideid" style="color:red;display:none;">
    <span href="https://www.secretchina.com">
    </span>
   </span>
  </p>
  <p>
-  大陸媒體報導，這件事發生在2019年4月，九龍坡區一個機關事務理局的食堂，謊報採購報帳單，如豬肉一斤185元、折耳根一斤445元、兒菜一天就要採購1776斤等，不僅如此，所有票據竟只有一張報賬單。
- </p>
- <p>
-  在進一步調查後發現，原來是該局副局長從上到下整個機關「做帳」，將整個食堂採購價以10倍報帳，還跟供貨商一起做假帳，共分貪污款。
- </p>
- <p>
-  相關消息在微博引發熱議。網友紛紛留言，「實體經濟強大，大家就不會盯著這塊肥肉了？」「如果他們沒改成10倍那麼離譜，是不是就查不出來？」「這種事情，應該只是冰山一角吧。」「窮的窮死富得冒油。」「這不是行業潛規則嗎？一般人都不查，除非得罪了誰，才有人查」
- </p>
- <p>
-  事實上，這在中國只是很小的
-  <span href="https://www.secretchina.com/news/gb/tag/貪腐" target="_blank">
-   貪腐
+  11月20日下午，
+  <span href="https://www.secretchina.com/news/gb/search?nohard=0&amp;q=%E5%9B%9B%E5%B7%9D%E6%B3%B8%E5%B7%9E" target="_blank">
+   四川泸州
   </span>
-  案，且是發生在去年，但問題，24日被刊登在中國指標性官媒的頭版，意欲凸顯整個問題，但是，就是不知要凸顯的重點是打貪？還豬肉荒？
+  一公司到纳溪区大渡口镇“梦里水乡”农场进行水上拓展训练。事故疑似发生在“水上侧攀网”项目，不想在过程中突然发生意外，造成3人死亡，1人受伤。
+ </p>
+ <p>
+  根据网络视频可见，有穿救生衣也有未穿救生衣的人员在河流中扑腾。河上是一条没有桥板的铁索桥，岸上有妇女在喊：“你浮得起嘛浮不起，浮不起快点上来歇一下，你没得力气了，拉着绳子。”另一段视频中，已有两人躺在地上，身上盖着蓝布。
+ </p>
+ <p>
+  网传消息指，发生事故的人员疑似
+  <span href="https://www.secretchina.com/news/gb/tag/泸州" target="_blank">
+   泸州
+  </span>
+  某电玩城员工，正在进行“水上侧攀网”项目时发生意外。事故发生后，相关责任人已被控制，该景区亦暂停对外营业。
+ </p>
+ <p>
+  据了解，“梦里水乡”是位于泸州纳溪区大渡口镇凤凰湖景区平桥河畔的一处休闲农庄，里面开展多个拓展训练项目，包括150米长的空中云梯、划船、同心桥、侧攀网、空中滑索、射箭等项目。
  </p>
  <p style="margin-bottom:12px;">
   <hr style="border-top: 1px dashed  ;" width="100%"/>
@@ -86,7 +84,7 @@
   ，就可以助力我们突破审查与封锁，向至少10000位中国大陆同胞奉上独立真实的关键资讯，在危难时刻向他们发出预警，救他们于大瘟疫与其它社会危难之中。
   <center>
    <span href="https://account.secretchina.com/planshopcart.php?pid=2020plana&amp;carf=add&amp;code=b5">
-    <img src="/kzgd/ad/join_membership_728x90.jpg" width="100%"/>
+    <img src="/kzgd/ad/kzgad202010728.gif" width="100%"/>
    </span>
   </center>
   <center>
@@ -118,13 +116,13 @@
 
 <hr/>
 手机上长按并复制下列链接或二维码分享本文章：<br/>
-https://github.com/gfw-breaker/banned-news3/blob/master/pages/p1/947155.md <br/>
-<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p1/947155.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p1/947155.md.png'/></a> <br/>
-原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/09/24/947155.html
+https://github.com/gfw-breaker/banned-news3/blob/master/pages/p1/953348.md <br/>
+<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p1/953348.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p1/953348.md.png'/></a> <br/>
+原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/11/21/953348.html
 
 
 ------------------------
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;|&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md) &nbsp;| [《九评共产党》](https://github.com/gfw-breaker/9ping.md/blob/master/README.md#九评之一评共产党是什么) | [《解体党文化》](https://github.com/gfw-breaker/jtdwh.md/blob/master/README.md) | [《共产主义的终极目的》](https://github.com/gfw-breaker/gczydzjmd.md/blob/master/README.md)
 
 
-<img src='http://gfw-breaker.win/banned-news3/pages/p1/947155.md' width='0px' height='0px'/>
+<img src='http://gfw-breaker.win/banned-news3/pages/p1/953348.md' width='0px' height='0px'/>
