--- a/pages/p5/953351.md
+++ b/pages/p5/953351.md
@@ -1,4 +1,4 @@
-### 中共五中全会十四五规划 社科院提出经济难题(图)
+### 困在蛋壳租金贷里的年轻人：遭遇社会毒打(图)
 ------------------------
 
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;&nbsp;|&nbsp;&nbsp; [法轮功真相](https://github.com/begood0513/basic/blob/master/README.md)  &nbsp;&nbsp;|&nbsp;&nbsp; [手把手翻墙教程](https://github.com/gfw-breaker/guides/wiki)  &nbsp;&nbsp;|&nbsp;&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md)  
@@ -6,10 +6,10 @@
 
 
 <div class="article_right" style="fone-color:#000">
- <p style="text-align:center">
-  <img alt="十九届五中全会 “十四五”规划 经济" src="https://img2.secretchina.com/pic/2018/10-2/p2274491a345410253-ss.jpg" style="height:337px; width:600px"/>
+ <p style="text-align: center;">
+  <img alt="蛋壳公寓 租金贷 年轻人 社会" src="https://img3.secretchina.com/pic/2020/4-6/p2664181a281593021-ss.jpg"/>
   <br>
-   中共政治局会议强调，“十三五”规划目标任务即将完成。（图片来源：Adobe stock）
+   公寓示意图。（图片来源：Adobe Stock）
    <span id="hideid" name="hideid" style="color:red;display:none;">
     <span href="https://www.secretchina.com">
     </span>
@@ -21,70 +21,64 @@
 
 ---
 
-#### 💥 [《伪火》 - 天安门自焚真相 ](http://158.247.195.190:10000/videos/blog/weihuo.html)&nbsp; |&nbsp; [“1400例”谎言揭秘  ](http://158.247.195.190:10000/videos/blog/jiexi1400.html)
-
 #### [ 🎬  翻墙必看视频（YouTube热门频道、网站代理、时事热点、历史事件 ...）](https://github.com/gfw-breaker/links/blob/master/banned.md)
+
+#### [ 💥  禁书下载（政治、经济、人权、民主自由、文革、六四 ...）](https://github.com/gfw-breaker/books/blob/master/README.md)
 
 
   </div>
  </div>
  <p>
-  【看中国2020年9月29日讯】（看中国记者文龙综合报导）9月28日，中共政治局决定
+  【看中国2020年11月21日讯】（看中国记者丁晓雨综合报导）
   <strong>
-   十九届
-   <span href="https://www.secretchina.com/news/gb/tag/五中全会" target="_blank">
-    五中全会
+   <span href="https://www.secretchina.com/news/gb/tag/蛋壳公寓" target="_blank">
+    蛋壳公寓
    </span>
   </strong>
-  于10月26日至29日召开，研究制定十四个五年
+  创立之初，宣称是“要给在外打拼的
   <strong>
-   经济
+   年轻人
   </strong>
-  规划等。不过，中国社科院发布的《中国农村发展报告2020》，提出了
+  一个温暖的家”，如今 “避风港”成了“风暴眼”，租户、业主、员工、供应商全都被困在蛋壳里苦苦挣扎。尤其是那些掉进
   <strong>
-   “十四五”规划
+   租金贷
   </strong>
-  绕不开的难题。
+  陷阱里的年轻人，称自己“遭遇
+  <strong>
+   社会
+  </strong>
+  毒打”，甚至动了绝望轻生的念头。
   <span id="hideid" name="hideid" style="color:red;display:none;">
    <span href="https://www.secretchina.com">
    </span>
   </span>
  </p>
  <p>
-  据《新华社》报道，中共政治局9月28日召开会议，决定中共第十九届中央委员会第五次全体会议于10月26日至29日在北京召开。会议并研究制定国民经济和社会发展第十四个五年规划（
-  <span href="https://zh.wikipedia.org/wiki/%E4%B8%AD%E5%8D%8E%E4%BA%BA%E6%B0%91%E5%85%B1%E5%92%8C%E5%9B%BD%E5%9B%BD%E6%B0%91%E7%BB%8F%E6%B5%8E%E5%92%8C%E7%A4%BE%E4%BC%9A%E5%8F%91%E5%B1%95%E7%AC%AC%E5%8D%81%E5%9B%9B%E4%B8%AA%E4%BA%94%E5%B9%B4%E8%A7%84%E5%88%92%E7%BA%B2%E8%A6%81" target="_blank">
-   “十四五”规划
+  从蛋壳公寓CEO被调查，租住在
+  <span href="https://zh.wikipedia.org/wiki/蛋壳公寓" target="_blank">
+   蛋壳公寓
   </span>
-  ）和2035年远景目标，决定根据会议讨论的意见进行修改后将文件稿提请
-  <span href="https://zh.wikipedia.org/wiki/%E4%B8%AD%E5%9B%BD%E5%85%B1%E4%BA%A7%E5%85%9A%E7%AC%AC%E5%8D%81%E4%B9%9D%E5%B1%8A%E4%B8%AD%E5%A4%AE%E5%A7%94%E5%91%98%E4%BC%9A%E7%AC%AC%E4%BA%94%E6%AC%A1%E5%85%A8%E4%BD%93%E4%BC%9A%E8%AE%AE" target="_blank">
-   十九届五中全会
-  </span>
-  审议。
+  里的年轻人们，梦魇也开始了。不但被房东收回房子，在办理完无责退租后，才发现由于蛋壳拖欠银行剩余款项，自己的“租金贷”无法解除。这意味着，即使退了蛋壳的房子，也得继续还这一份房租。
  </p>
  <p>
-  中共政治局会议强调，“‘十三五’时期（2016-2020年）是全面建成小康社会决胜阶段，‘十三五’规划目标任务即将完成……”。
+  “您申请的问题暂时无法处理，我们会进行登记，请您耐心等待业务专员联系您。”在蛋壳困局里的租客们，每打一个电话，不是没人接听，就是上面的机器回复。
  </p>
  <p>
-  今年是北京当局所谓的脱贫攻坚战及全面建成小康社会之年，但是，中国
-  <span href="https://zh.wikipedia.org/wiki/%E7%BB%8F%E6%B5%8E" target="_blank">
-   经济
+  据豹变报导，蛋壳出事后，告知租客可以办理无责退租。但退租后，租客们才发现，由于蛋壳拖欠银行剩余款项，自己的“
+  <span href="https://zh.wikipedia.org/wiki/蛋壳公寓#租金贷" target="_blank">
+   租金贷
   </span>
-  下滑叠加武汉肺炎疫情等因素，官方专家表示应推迟全面小康社会的收官。
+  ”无法解除。也就是不住蛋壳的房子，也得继续还这一份房租。
  </p>
  <p>
-  所谓的脱贫攻坚战，是北京当局在2015年底开始进行一项计划，目的是在2020年底前实现解决所有贫困地区和贫困人口问题。
+  有维权的房客打了90个电话，蛋壳客服、微众银行、银监会、房管所、12345、12315，甚至申请了银行业消费者权益保护促进会的调解，但无一例外全是机器的回复。租客们除了等待，毫无办法。
  </p>
  <p>
-  据《路透社》8月25日报道，担任过中国国家统计局副局长及全国人大财经委员会副主任的贺铿表示，全面小康社会最被大家重视的指标，是实现按可比价计算的GDP，要在2000年的基础上再翻两番。“临近交答卷的时候了，谁也没有料到中美打
-  <span href="https://www.secretchina.com/news/gb/tag/贸易战" target="_blank">
-   贸易战
+  按时交租的年轻人不知道怎么会这样，更不知道该如何应对这样的困局。当初选择对蛋壳这个上市公司招牌的信任，再加上跟蛋壳签合同时，管家告诉他们，蛋壳有一项针对应届毕业生的优惠措施，可免押金、按月付。满怀希望的年轻人住进长租公寓，直到蛋壳出事，才发现被“套路”了，因为所谓的优惠，其实就是
+  <span href="https://www.secretchina.com/news/gb/tag/租金贷" target="_blank">
+   租金贷
   </span>
-  和发生新冠病疫。最近，又因香港国安法，接二连三出事，而且都是大事（发生）在临近实现小康社会目标之年。”
-  <br>
-   <br>
-    贺铿表示，全国近半数人月入区区一千元左右。社会保障水平很低，医疗、教育负担沉重。疫情冲击下，失业率上升，许多年轻人找不到工作。还有两亿多农民工离乡背井流入到城市，买不起房子，居无定所。孩子、老人留守在农村，农村显得很凋敞，日子难熬。工农差别、城乡差别不是缩小了，而是在不断扩大。居民收入相差悬殊，许多人心里不平衡。
-   </br>
-  </br>
+  。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -99,11 +93,86 @@
   </div>
  </center>
  <p>
-  贺铿建议，推迟全面小康社会的收官。全面小康社会应该是中产阶层为主体的社会，实际上，中产阶层还没有真正形成，按照统计局数字，就算最低标准是家庭收入3万元以上，
-  <span href="https://www.secretchina.com" target="_blank">
-   中国
+  表面上，是租户开了租金贷，分期月还，实际上蛋壳利用租户的信用直接从金融机构获取一年的贷款，再用这些钱去“收更多的房”以及支付业主房租。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  豹变称，在长租公寓疯狂扩张的2016年，包括蛋壳在内的玩家都是以这样的方式“跑马圈地”，高价抢房。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  2020年1月，蛋壳公寓上市，招股说明书里称，“租客预付租金是我们营运现金流入的重要来源，我们也与金融机构合作为租客提供租金融资，并预付给我们。这些融资活动构成我们现金流入支持的重要来源。”
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  在这里，租户、蛋壳、金融机构以及业主，任何一个环节出了问题，就可能发生多米诺骨牌倒塌效应。而最终，租户都将成为牺牲品。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  如今，蛋壳碎了，租金贷的紧箍咒却牢牢的套在租客的头上，他们依然会收到银行贷款已逾期的信息，即使已经被房东清理出公寓，他们还要继续交付蛋壳的房租。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  在此过程中，有租客碰到业主强行收房选择报警，警方的建议是：矛盾是因蛋壳而起，你们应该一起找蛋壳。租户们觉得，自己“遭遇了
+  <span href="https://zh.wikipedia.org/wiki/社会" target="_blank">
+   社会
   </span>
-  也只有3亿人能达到，还有11亿人达不到中产阶层的收入标准。
+  毒打”。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -118,7 +187,7 @@
   </div>
  </center>
  <p>
-  另外，就第十四个五年规划，作为中南海智库的中国社会科学院8月17日发布《中国农村发展报告2020》称，“十四五”(2021-2025年)期间中国出现1.3亿吨左右的粮食缺口，其中谷物（三大主粮）缺口约为2,500万吨。
+  据豹变报导，有租户表示，可以不要押金，剩下的租金也可以不退，甚至愿意给蛋壳钱，只求解除与微众银行的贷款合同。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -133,37 +202,11 @@
   </div>
  </center>
  <p>
-  与此同时，中国的粮食仍然严重依赖进口，这对用于购买进口粮食的外汇储备造成相当大的压力。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  报告预计，到2025年，中国城镇化率将达到65.5%，保守估计新增农村转移人口在8,000万人以上；农业就业人员比重将下降到20%左右；乡村60岁以上人口比例将达到25.3%，约为1.24亿人。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  报告称，“目前农村发展中仍面临着诸多矛盾和问题，如农民种粮积极性下降、农民持续增收难度加大、农村老龄化日趋严重、农村民生短板突出、村庄分化日益加剧等，需要引起高度重视。”
+  面对这样的困局，有租户甚至动了轻生的念头，“或许一年的贷款对于很多人来说不算什么，但是对于刚步入
+  <span href="https://www.secretchina.com/news/gb/tag/社会" target="_blank">
+   社会
+  </span>
+  的农村学生、打工者来说是我们的全部，累了……”在一个蛋壳租户维权群里，有租户说，“蛋壳快成凶手了”。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -182,13 +225,7 @@
   </ins>
  </center>
  <p>
-  <strong>
-   五年
-   <span href="https://www.secretchina.com/news/gb/tag/经济" target="_blank">
-    经济
-   </span>
-   规划
-  </strong>
+  困在蛋壳里的不仅是租户，也有业主和员工。蛋壳大规模拖欠业主的租金，有业主在确定蛋壳违约之后便申请解约，然而申请石沉大海，蛋壳方面杳无音信。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -203,7 +240,7 @@
   </div>
  </center>
  <p>
-  “五年规划”（原称“五年计划”），是中共政府主要对重大建设项目、生产力分布和国民经济比例关系等做出规划。自1953年开始制定第一个“五年计划”以来，中共政府已发布十三个“五年规划（计划）”。
+  租户、业主们困在原地，等一个答复。蛋壳的员工也无所适从。他们没有拿到10月份的工资，公司说缓发，至于缓到什么时候，通知没说。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -218,7 +255,7 @@
   </div>
  </center>
  <p>
-  第一个五年计划于1953年至1957年执行，简称“一五计划”。1958年开始执行第二个五年计划（二五计划），依此类推。1958年至1962年的大跃进造成打破计划的时期。“三五计划”原本应该于1963年开始，因为延迟，起始年变成1966年。2006年起，“五年计划”更改名称为“五年规划”，官方英文译名（five-year plan）则保留不变。
+  困局中无法脱身的还有供应商。11月10日，近百位供应商和员工聚集在蛋壳公司总部讨欠款，甚至爆发肢体冲突。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -233,7 +270,22 @@
   </div>
  </center>
  <p>
-  这实际仍是计划经济（Planned economy）的一种形式，计划经济又称统制经济或指令型经济，是一种经济体制，在这种体系下，国家在生产、资源分配以及消费等各方面，都是由政府事先进行计划。“指令型经济”通常和计划经济用法相同，但是详加区分的话，指令型经济是指生产工具公有的经济体制。所以指令型经济必定是计划经济，但计划经济却不一定是指令型经济。
+  蛋壳总共有几百家供应商，跟保洁相关的有10来家，蛋壳给予供应商的答复是：“要承担经营风险。”
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  蛋壳财报显示， 2017到2019年，蛋壳分别亏损2.72亿元、13.66亿元和34.35亿元。2020年一季度，蛋壳又亏12.3亿元，且至今仍未发布第二季度财报。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -265,7 +317,7 @@
   ，就可以助力我们突破审查与封锁，向至少10000位中国大陆同胞奉上独立真实的关键资讯，在危难时刻向他们发出预警，救他们于大瘟疫与其它社会危难之中。
   <center>
    <span href="https://account.secretchina.com/planshopcart.php?pid=2020plana&amp;carf=add&amp;code=b5">
-    <img src="/kzgd/ad/join_membership_728x90.jpg" width="100%"/>
+    <img src="/kzgd/ad/kzgad202010728.gif" width="100%"/>
    </span>
   </center>
   <center>
@@ -297,13 +349,13 @@
 
 <hr/>
 手机上长按并复制下列链接或二维码分享本文章：<br/>
-https://github.com/gfw-breaker/banned-news3/blob/master/pages/p5/947596.md <br/>
-<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p5/947596.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p5/947596.md.png'/></a> <br/>
-原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/09/29/947596.html
+https://github.com/gfw-breaker/banned-news3/blob/master/pages/p5/953351.md <br/>
+<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p5/953351.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p5/953351.md.png'/></a> <br/>
+原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/11/21/953351.html
 
 
 ------------------------
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;|&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md) &nbsp;| [《九评共产党》](https://github.com/gfw-breaker/9ping.md/blob/master/README.md#九评之一评共产党是什么) | [《解体党文化》](https://github.com/gfw-breaker/jtdwh.md/blob/master/README.md) | [《共产主义的终极目的》](https://github.com/gfw-breaker/gczydzjmd.md/blob/master/README.md)
 
 
-<img src='http://gfw-breaker.win/banned-news3/pages/p5/947596.md' width='0px' height='0px'/>
+<img src='http://gfw-breaker.win/banned-news3/pages/p5/953351.md' width='0px' height='0px'/>
